# kthfsdv_training

./: README.md
Navigation/: plan_pseudo_code.m  plan_test.py  pseud_curved.m
Plotting/: kth_plot.py  plot_basic.py  test.py
Publishers and Subscribers/devel/: .catkin  .rosinstall  setup.sh
Publishers and Subscribers/src/exc1/exc1/: CMakeLists.txt
Publishers and Subscribers/src/exc1/pub1/: package.xml  package1.py
Publishers and Subscribers/src/exc1/sub1/: package.xml
exc1/exc1/: CMakeLists.txt  package.xml
exc1/pub1/: CMakeLists.txt
exc1/sub1/: CMakeLists.txt  package2.py
exc2/: Updating plot.py
